Version 26, Tue, Added Log function.